unpackaged/main/default/objects/StoredCredentials__c/StoredCredentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A set of stored credentials for API login, etc.</description>
    <label>Stored Credentials</label>
</CustomObject>