unpackaged/main/default/objects/StoredCredentials__c/fields/Full_Endpoint_2__c.field-meta.xml
<CustomField>
    <fullName>Full_Endpoint_2__c</fullName>
    <label>Full Endpoint 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>