unpackaged/main/default/objects/StoredCredentials__c/fields/Full_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Full_Endpoint__c</fullName>
    <description>Full endpoint of the integration being connected to</description>
    <label>Full Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>