unpackaged/main/default/objects/StoredCredentials__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>The username for the authentication</description>
    <label>Username</label>
    <length>24</length>
    <required>true</required>
    <type>Text</type>
</CustomField>